# Cowbot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  LICENSE  MIGRATION.md  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json
.claude/plans/: let-s-stop-packaging-the-serialized-globe.md
apps/api/: .env.example  Dockerfile  nest-cli.json  package.json  project.json  tsconfig.json
apps/api/liquibase/: liquibase.properties
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/desktop/: .gitignore  index.html  package-lock.json  package.json  project.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/src/: App.tsx  (+3 more)
apps/web/: Dockerfile  index.html  nginx.conf  package.json  project.json  tsconfig.json  vite.config.ts
deploy/: .env.example  Caddyfile  docker-compose.prod.yml
deploy/downloads/: .gitkeep
desktop/: .gitignore  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
desktop/electron/: main.ts  preload.ts  report-template.css
desktop/scripts/: prepare-python.sh
desktop/src/: App.tsx  index.css
libs/i18n/: package.json  project.json  tsconfig.json
libs/shared/: package.json  project.json  tsconfig.json
libs/ui/: package.json  project.json  tsconfig.json
prompts/: monthly_report.md
scripts/: _ui.py  build_context.py  deploy-ssh.sh  fetch_brazil.py  fetch_fx.py  fetch_quotes.py  generate_report.py  publish-mac.sh  pyproject.toml  to_pdf.py
(+101 files in other folders)
