[project]
name = "investment-plan-scripts"
version = "0.1.0"
description = "Helper scripts for the monthly investment report"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "requests>=2.32",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "markdown>=3.6",
    "weasyprint>=62.0",
]

[tool.uv]
package = false
